# eseed-engine

./: CMakeLists.txt  notes.txt  test.txt
dependencies/gpu/: CMakeLists.txt
dependencies/gpu/include/eseed/gpu/: rendercontext.hpp
dependencies/gpu/src/: rendercontext.cpp
dependencies/graphics/: CMakeLists.txt
dependencies/graphics/include/eseed/graphics/rendering/: devicemanager.hpp  instancemanager.hpp  physicaldevicemanager.hpp  rendercontext.hpp  rendercontext_old.hpp  surfacemanager.hpp  swapchainmanager.hpp
dependencies/graphics/include/eseed/graphics/window/: window.hpp  windowwin32.hpp  windowwindows.hpp
dependencies/graphics/src/: devicemanager.cpp  instancemanager.cpp  physicaldevicemanager.cpp  rendercontext.cpp  rendercontext_old.cpp  surfacemanager.cpp  swapchainmanager.cpp  window.cpp  windowwin32.cpp  windowwindows.cpp
dependencies/logging/: CMakeLists.txt
dependencies/logging/include/eseed/logging/: format.hpp  format.inl  logger.hpp
dependencies/logging/src/: format.cpp  logger.cpp
dependencies/math/: CMakeLists.txt
dependencies/math/include/eseed/math/: mat.hpp  matops.hpp  ops.hpp  types.hpp  vec.hpp
dependencies/window/: CMakeLists.txt
dependencies/window/include/eseed/window/: window.hpp  windowwin32.hpp
dependencies/window/src/: window.cpp  windowwin32.cpp
resources/shaders/test/: test.frag  test.frag.spv  test.vert  test.vert.spv  test_vert.spv
src/: main.cpp
src/gpu/: gpu.cpp  gpu.hpp  mesh.hpp  meshbuffer.hpp  presentmanager.cpp  presentmanager.hpp  rendercontext.cpp  rendercontext.hpp  renderpipeline.cpp  renderpipeline.hpp  resourcemanager.cpp  resourcemanager.hpp
